# web2050

./: .env  .gitignore  .rgignore  Cargo.toml  README.md
internet/: style.css  tailwindcss.js
src/: ai.rs  assets.rs  csp.rs  main.rs  streaming_parser.rs
