[package]
name = "wifi"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.4", default-features = false, features = ["http2", "matched-path", "original-uri", "tokio", "query", "http1"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
html-escape = "0.2.13"
jwalk = "0.8.1"
reqwest = { version = "0.12.22", default-features = false, features = [ "rustls-tls", "stream", "json" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.46.1", features = ["full"] }
dotenvy = { git = "https://github.com/allan2/dotenvy", branch = "main", version = "0.15.7" }
tower-http = { version = "0.6.6", features = ["fs"] }
tokio-util = "0.7.15"
mime_guess = "2.0.5"
